--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://gautampatidar12.github.io/Medi-client",
+  "homepage": "https://gautampatidar12.github.io/Medi-Client",
   "name": "client",
   "version": "0.1.0",
   "private": true,
